sw/qa/extras/uiwriter/uiwriter2.cxx
@@ -2421,4 +2421,10 @@ CPPUNIT_TEST_FIXTURE(SwUiWriterTest2, testOfz18563)
     TestImportDOCX(aFileStream);
 }
 
+CPPUNIT_TEST_FIXTURE(SwUiWriterTest2, testTdf129655)
+{
+    createDoc("tdf129655-vtextbox.odt");
+    xmlDocPtr pXmlDoc = parseLayoutDump();
+    assertXPath(pXmlDoc, "//fly/txt[@WritingMode='Vertical']", 1);
+}
 /* vim:set shiftwidth=4 softtabstop=4 expandtab: */
